--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
     const linkCode=params.get('linkCode');
     const reservedServerAccessCode=params.get('reservedServerAccessCode');
     if(!(gameInstanceId||accessCode||linkCode||reservedServerAccessCode))return window.location=rbx;
-    const args={gameInstanceId,accessCode,linkCode,reservedServerAccessCode};
+    const launchData=params.get('launchData');
+    const joinAttemptOrigin=params.get('joinAttemptOrigin');
+    const callId=params.get('callId');
+    const browserTrackerId=params.get('browserTrackerId');
+    const referralPage=params.get('referralPage');
+    const referredByPlayerId=params.get('referredByPlayerId');
+    const args={
+      gameInstanceId,accessCode,linkCode,reservedServerAccessCode,launchData,
+      joinAttemptOrigin,callId,browserTrackerId,referralPage,referredByPlayerId
+    };
     window.location=rbx+'&'+Object.entries(args).filter(v=>v[1]).map(v=>v.join('=')).join('&');
   })()
 </script>
