--- a/navigation/content_posts/index.html
+++ b/navigation/content_posts/index.html
@@ -1,8 +1,8 @@
 <script>
   (async()=>{
     const params=new URLSearchParams(window.location.search);
-    const userId=params.get('userId');
-    const postId=params.get('postId');
+    const userId=params.get('userId')||params.get('uId');
+    const postId=params.get('postId')||params.get('pId');
     if(!(Number(userId)&&postId))return document.querySelector('html').innerHTML="userId & postId";
     return window.location=`roblox://navigation/content_posts?userId=${userId}&postId=${postId}`;
   })()
