--- a/navigation/qr_code_redemption/index.html
+++ b/navigation/qr_code_redemption/index.html
@@ -3,7 +3,7 @@
     const params=new URLSearchParams(window.location.search);
     const itemId=params.get('itemId')||params.get('id');
     const itemType=params.get('itemType')||params.get('type');
-    if(!(Number(itemId)&&itemType))return document.querySelector('html').innerHTML="itemId/id & itemType/type";
-    return window.location=`roblox://navigation/catalog/equip?itemId=${itemId}&itemType=${itemType}`;
+    if(!(Number(itemId)&&itemType))return document.querySelector('html').innerHTML="itemId & itemType";
+    return window.location=`roblox://navigation/qr_code_redemption?itemId=${itemId}&itemType=${itemType}`;
   })()
 </script>
