--- a/navigation/details/asset/index.html
+++ b/navigation/details/asset/index.html
@@ -1,7 +1,7 @@
 <script>
   (async()=>{
     const params=new URLSearchParams(window.location.search);
-    const itemId=params.get('assetId')||params.get('itemId')||params.get('id');
+    const itemId=[...new URLSearchParams(window.location.search).values()]?.[0];//params.get('assetId')||params.get('itemId')||params.get('id');
     if(!Number(itemId))return document.querySelector('html').innerHTML="assetId/itemId/id";
     return window.location=`roblox://navigation/item_details?itemId=${itemId}&itemType=Asset`;
   })()
