--- a/navigation/details/place/index.html
+++ b/navigation/details/place/index.html
@@ -1,7 +1,7 @@
 <script>
   (async()=>{
     const params=new URLSearchParams(window.location.search);
-    const placeId=params.get('placeId')||params.get('pId')||params.get('id');
+    const placeId=[...new URLSearchParams(window.location.search).values()]?.[0];//params.get('placeId')||params.get('pId')||params.get('id');
     if(!Number(placeId))return document.querySelector('html').innerHTML="placeId/id";
     return window.location=`roblox://navigation/game_details?placeId=${placeId}`;
   })()
