--- a/navigation/profile_card/index.html
+++ b/navigation/profile_card/index.html
@@ -1,7 +1,7 @@
 <script>
   (async()=>{
     const params=new URLSearchParams(window.location.search);
-    const userId=params.get('userId')||params.get('uId')||params.get('id');
+    const userId=[...new URLSearchParams(window.location.search).values()]?.[0];//params.get('userId')||params.get('uId')||params.get('id');
     if(!Number(userId))return document.querySelector('html').innerHTML="userId";
     return window.location=`roblox://navigation/profile_card?userId=${userId}`;
   })()
