--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     const placeId=params.get('placeId')||params.get('pId')||params.get('id');
     if(!placeId||!Number(placeId))return document.querySelector('html').innerHTML="placeId";
     const rbx='roblox://placeId='+placeId;
-    const gameInstanceId=params.get('gameInstanceId');
+    const gameInstanceId=params.get('gameInstanceId')||params.get('gIId')||params.get('gII')||params.get('gId')||params.get('sId');
     const accessCode=params.get('accessCode');
     const linkCode=params.get('linkCode');
     const reservedServerAccessCode=params.get('reservedServerAccessCode');
@@ -22,4 +22,5 @@
     };
     window.location=rbx+'&'+Object.entries(args).filter(v=>v[1]).map(v=>v.join('=')).join('&');
   })()
+
 </script>
