--- a/404.html
+++ b/404.html
@@ -1,29 +1,36 @@
-<head>
-  <title>RoDirect</title>
-  <script>
-    (async()=>{
-      const query=window.location.pathname.split('/').slice(2);console.log(query);
-      const placeId=query[0];
-      if(!placeId||!Number(placeId))return document.querySelector('html').innerHTML="placeId";
-      const rbx='roblox://placeId='+placeId;
-      if(query[1])return(window.location=rbx+'&gameInstanceId='+query[1]);
-      const params=new URLSearchParams(window.location.search);
-      const gameInstanceId=params.get('gameInstanceId')||params.get('gIId')||params.get('gII')||params.get('gId')||params.get('sId');
-      const accessCode=params.get('accessCode');
-      const linkCode=params.get('linkCode');
-      const reservedServerAccessCode=params.get('reservedServerAccessCode');
-      if(!(gameInstanceId||accessCode||linkCode||reservedServerAccessCode))return window.location=rbx;
-      const launchData=params.get('launchData');
-      const joinAttemptOrigin=params.get('joinAttemptOrigin');
-      const callId=params.get('callId');
-      const browserTrackerId=params.get('browserTrackerId');
-      const referralPage=params.get('referralPage');
-      const referredByPlayerId=params.get('referredByPlayerId');
-      const args={
-        gameInstanceId,accessCode,linkCode,reservedServerAccessCode,launchData,
-        joinAttemptOrigin,callId,browserTrackerId,referralPage,referredByPlayerId
-      };
-      window.location=rbx+'&'+Object.entries(args).filter(v=>v[1]).map(v=>v.join('=')).join('&');
-    })()
-  </script>
-</head>
+<html>
+  <head>
+    <title>RoDirect</title>
+    <script>
+      (async()=>{
+        const query=window.location.pathname.split('/').slice(2);console.log(query);
+        const placeId=query[0];
+        if(placeId&&!Number(placeId)&&placeId.length==32){
+          const b=Uint8Array.from(atob(placeId.replace(/-/g,'+').replace(/_/g,'/')),c=>c.charCodeAt(0));
+          const h=[...b.subarray(8)].map(v=>v.toString(16).padStart(2,'0')).join('');
+          return window.location=`roblox://placeId=${new DataView(b.buffer).getBigUint64(0,true)}&gameInstanceId=${[h.slice(0,8),h.slice(8,12),h.slice(12,16),h.slice(16,20),h.slice(20)].join('-')}`;
+        }
+        if(!placeId||!Number(placeId))return document.querySelector('html').innerHTML="placeId";
+        const rbx='roblox://placeId='+placeId;
+        if(query[1])return(window.location=rbx+'&gameInstanceId='+query[1]);
+        const params=new URLSearchParams(window.location.search);
+        const gameInstanceId=params.get('gameInstanceId')||params.get('gIId')||params.get('gII')||params.get('gId')||params.get('sId');
+        const accessCode=params.get('accessCode');
+        const linkCode=params.get('linkCode');
+        const reservedServerAccessCode=params.get('reservedServerAccessCode');
+        if(!(gameInstanceId||accessCode||linkCode||reservedServerAccessCode))return window.location=rbx;
+        const launchData=params.get('launchData');
+        const joinAttemptOrigin=params.get('joinAttemptOrigin');
+        const callId=params.get('callId');
+        const browserTrackerId=params.get('browserTrackerId');
+        const referralPage=params.get('referralPage');
+        const referredByPlayerId=params.get('referredByPlayerId');
+        const args={
+          gameInstanceId,accessCode,linkCode,reservedServerAccessCode,launchData,
+          joinAttemptOrigin,callId,browserTrackerId,referralPage,referredByPlayerId
+        };
+        window.location=rbx+'&'+Object.entries(args).filter(v=>v[1]).map(v=>v.join('=')).join('&');
+      })()
+    </script>
+  </head>
+</html>
